--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
     },
     "dependencies": {
         "@inertiajs/react": "^2.2.8",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-slot": "^1.2.3",
         "@vitejs/plugin-react": "^5.0.4",
         "button": "^1.1.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "lucide-react": "^0.546.0",
-        "shad": "^1.0.0"
+        "shad": "^1.0.0",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
