--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.3",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
