--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.546.0",
+        "react-draggable": "^4.5.0",
+        "react-resizable": "^3.0.5",
+        "react-signature-canvas": "^1.1.0-alpha.2",
         "shad": "^1.0.0",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7"
