--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-resizable": "^3.0.5",
         "react-signature-canvas": "^1.1.0-alpha.2",
         "shad": "^1.0.0",
+        "sweetalert2": "^11.26.3",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7"
     }
