--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.2",
         "@inertiajs/react": "^2.2.8",
+        "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@vitejs/plugin-react": "^5.0.4",
         "button": "^1.1.1",
         "class-variance-authority": "^0.7.1",
@@ -36,12 +40,14 @@
         "lucide-react": "^0.546.0",
         "pdfjs-dist": "^5.4.296",
         "react-draggable": "^4.5.0",
+        "react-hook-form": "^7.65.0",
         "react-resizable": "^3.0.5",
         "react-signature-canvas": "^1.1.0-alpha.2",
         "shad": "^1.0.0",
         "sidebar": "^1.0.2",
         "sweetalert2": "^11.26.3",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^4.1.12"
     }
 }
